* Make Median matcher work without complaint at startup and if unknown data elements occur in the stream.

2011/11/12 -- released version 2.6.6

* fixed embedded version number in Smokeping.pm

2011/10/30 -- released version 2.6.5

* improved configurability and generate config specific config.dist file
  by Tim Wild

2011/10/20 -- released version 2.6.4

* fixed gettimeofday() in SSH.pm probe too as noted by Phillip Corchary

2011/10/20 -- released version 2.6.3

* make sure probes call gettimeofday with () as noted by Phillip Corchary

2011/10/11 -- released version 2.6.2

* migrated to github.com/oetiker/SmokePing
* added missing files from cropper tree

2011/09/28 -- released version 2.6.1

* improved install documentation

2011/09/28 -- released version 2.6.0

* added automake support

* fixed strftime to POSIX::strftime in Smokeping.pm -- reported by Joe Colin

2011/09/26 -- released version 2.5.1

* fixed version number in modules

2011/09/25 -- released version 2.5.0

* in zoom/ajax mode, do not exit ... fastcgis should not quit

* Switch from using SpeedyCGI to FastCGI. inspired by a patch from Ken Dreyer

* Added new OpenSSHJunOSPing probe to run ping from a juniper router via
  ssh.  This work has been sponsored by Juniper.

* Integrated Disman probe ( DISMAN-PING-MIB: RFC Ping ) by Bill Fenner. This
  work has been sponsored by Juniper.
  
* removed smoketrace support. this and more functionality is now provided by
  remocular (www.remocular.org)

* give more advise when resetting LC_NUMERIC is not successful -- Lee Thompson 

* allow alert patterns with lower AND upper limit  >a<b or >=A%<B% or ...
  -- tobi idea by Justin LeMay

* new probe for SIP Ping test based on sipsak tool 
  -- tobi sponsored by ANI Networks

* bandaid fix for timeout issue in CiscoRTTMonEchoICMP probe ...
  since the probe needs a longer timeout, the basefork parent needs to wait
  longer too ... a local timeout configurable with higher default should fix
  this. -- tobi
